
syntax = "proto3";

package cpay.erc20;

service ERC20 {
    rpc CreateWallet(EmptyRequest) returns (CreateWalletReposnse) {}
    rpc GasPrice(EmptyRequest) returns (GasPriceReponse) {}
}

message EmptyRequest {
 
}

message CreateWalletReposnse {
    OperationStatus operationStatus =1;
    string operationMessage =2;
    string walletAddress =3;
    string userId =4;
    string privateKey =5 ;
}

message GasPriceReponse {
    OperationStatus operationStatus =1;
    string gasPrice =2;
}

enum OperationStatus {
    SUCCESS =0 ;
    FAIL = 1;
}